# Local-Codex-for-Enterprise

./: .dockerignore  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THREAT_MODEL.md  compose.enterprise.yaml  compose.yaml  docker-entrypoint.sh
codex-rs/: Cargo.toml  default.nix
codex-rs/app-server/: README.md
codex-rs/cli/src/: main.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/codex-api/src/endpoint/: chat_completions.rs  chat_completions_tests.rs  mod.rs
codex-rs/config/src/: config_toml.rs
codex-rs/config/src/thread_config/: remote.rs
codex-rs/core/: config.schema.json
codex-rs/core-plugins/src/: manager.rs  manager_tests.rs  startup_remote_sync.rs
codex-rs/core/src/: client.rs  docker_model_context.rs  docker_model_context_tests.rs  lib.rs
codex-rs/core/src/config/: config_tests.rs  docker_mcp.rs  docker_mcp_tests.rs  edit.rs  mod.rs
codex-rs/core/src/context_manager/: history.rs  history_tests.rs
codex-rs/core/src/session/: tests.rs
codex-rs/core/src/unified_exec/: async_watcher.rs  mod.rs  mod_tests.rs  process_manager.rs
codex-rs/core/tests/common/: test_codex.rs
codex-rs/core/tests/suite/: agent_websocket.rs  approvals.rs  cli_stream.rs  code_mode.rs  compact_remote.rs  compact_remote_parity.rs  model_switching.rs  request_permissions.rs  request_permissions_tool.rs  truncation.rs  unified_exec.rs  user_shell_cmd.rs
codex-rs/enterprise-server/: Cargo.toml
codex-rs/enterprise-server/migrations/: 0001_enterprise_bootstrap.sql  0002_admin_role_and_user_outputs.sql  0003_session_messages.sql  0004_domain_hierarchy.sql  0005_default_user_workspace_backfill.sql  0006_project_soft_delete.sql  0007_session_soft_delete.sql  0008_response_feedback_preferences.sql  0009_context_pack_file_storage.sql  0010_chat_workbench_outputs.sql  0011_thread_references.sql  0012_scheduled_sessions.sql
codex-rs/enterprise-server/src/: api.rs  auth.rs  config.rs  context_packs.rs  lib.rs  main.rs  rbac.rs  repo_clone.rs  setup.rs  storage.rs  trace.rs  worker.rs  workspace.rs
codex-rs/enterprise-server/tests/: scaffold.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  event_processor_with_jsonl_output_tests.rs
codex-rs/execpolicy-legacy/: README.md
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex-rs/models-manager/: models.json
codex-rs/models-manager/src/: model_info.rs  model_info_tests.rs
codex-rs/tui/src/: tooltips.rs
codex-rs/tui/src/history_cell/: session.rs
codex-rs/tui/src/history_cell/snapshots/: codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap  codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
codex-rs/tui/src/snapshots/: codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap  codex_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap
codex-rs/tui/src/status/: card.rs
docs/: CLA.md  ROADMAP.md  context-pack-contract.md  contributing.md  demo-browser-worker-local-model.md  enterprise-domain-contract.md  release-checklist-v0.1.0.md
docs/examples/context-pack-basic/: CONTEXT.md  ESCALATION.md  HANDOFF.md  OPERATING-INSTRUCTIONS.md  PACK.md  PROJECT-RULES.md  PROMPTS.md  VERIFICATION.md  WORKFLOWS.md
docs/examples/receipts/: context-pack-worker-load.json  worker-start.json
scripts/: test_container_build_config.py
(+16 files in other folders)
