[package]
name = "codex-enterprise-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true, features = ["json", "tokio"] }
base64 = { workspace = true }
casbin = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
utoipa = { workspace = true, features = ["axum_extras"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
