[package]
name = "codex-enterprise-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "json", "query", "tokio", "ws"] }
base64 = { workspace = true }
casbin = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
codex-uds = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
